scribble-assertions/src/test/resources/bad/extensions/annotations/Choice.scr
module bad.extensions.annotations.Choice;


type <java> "java.lang.Integer" from "rt.jar" as Int;


global protocol Prot(role A, role B, role C)
{
	choice at A {
		ADD(x:Int) from A to B;  
		ADD(z:Int) from B to C;  
	} or {
		RES(y:Int) from A to B;
		RES(z:Int) from B to C;
	}

	RES(y) from B to C; 
}